Closed Bug 734548 Opened 14 years ago Closed 14 years ago

Firefox 13.0a1 Crash @ nsDOMStorageEvent::GetStorageArea

Categories

(Core :: DOM: Events, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: emk, Assigned: emk)

Details

(Keywords: crash, reproducible)

Crash Data

Attachments

(1 file)

Attached patch patchSplinter Review
StorageEvent.storageArea is nullable per spec. http://dev.w3.org/html5/webstorage/#storageevent
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Attachment #604586 - Flags: review?(jonas)
No longer blocks: 730891
Comment on attachment 604586 [details] [diff] [review] patch Bug 730891 didn't change nsDOMStorageEvent::GetStorageArea. The bug is there with init*Event too.
Attachment #604586 - Flags: review?(jonas) → review+
Thanks for noticing this!
and fixing :)
Crash Signature: [@ nsDOMStorageEvent::GetStorageArea(nsIDOMStorage**)]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: