Bug 734548 - Fix crash when StorageEvent.storageArea is null. r=smaug